--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,7 +9,71 @@
       class="banner-mobile1"
     />
   </div>
-  <div class="body"></div>
+  <div class="section1">
+    <app-image-carousel></app-image-carousel>
+  </div>
+
+  <div class="section2">
+    <div class="part1">
+      <div class="p1">
+        <p>
+          Invite Friends/Family Our Platform gives Users the freedom to form
+          their own clusters from known friends and family members, save and
+          meet their spending goals.
+        </p>
+        <div class="hr"></div>
+      </div>
+      <div class="p1">
+        <p>
+          No Hidden Fees There are no hidden fees for using our platform. The
+          platform provides financial accountability and transparency among
+          group members.
+        </p>
+        <div class="hr"></div>
+      </div>
+      <div class="p1">
+        <p>
+          Security & Peace of Mind Our platform offers Users the most needed
+          security and peace of mind in meeting their spending goals, using the
+          power of many.
+        </p>
+        <div class="hr"></div>
+      </div>
+    </div>
+    <div class="part2">
+      <img src="../../../assets/Imgs/mobile-view2.png" alt="" />
+    </div>
+    <div class="part3">
+      <div class="p2">
+        <div class="hr"></div>
+        <p>
+          Group Chat & Notification Our end to end encrypted group chat feature
+          allows users to stay in touch with each other within their own
+          cluster. This enables users to discuss the status of their groups.
+        </p>
+      </div>
+      <div class="p2">
+        <div class="hr"></div>
+        <p>
+          Saves Time & Money Because Users formed their own clusters from known
+          friends and family members, there is a deep sense of security and
+          users will be able to make their contributions and disburse funds with
+          relative ease, supported by a world class payment processing platform.
+        </p>
+      </div>
+      <div class="p2">
+        <div class="hr"></div>
+        <p>
+          Access to Our Financial Coaching Center Users will be able to access
+          our Financial Coaching Center allowing them to benefit from a wide
+          range of financial topics affecting their financial wellbeing, such as
+          Savings, Spending, and Credit.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="section3"></div>
 
   <footer class="footer">
     <a routerLink="/privacyPolicy">Privacy Policy</a>
