--- a/src/app/sharepage/navbar/navbar.component.css
+++ b/src/app/sharepage/navbar/navbar.component.css
@@ -19,6 +19,7 @@
   );
   color: #fff;
   padding: 30px;
+  z-index: 99;
 }
 .navbar a {
   text-decoration: none;
@@ -76,4 +77,34 @@
 
 .dropdown:hover .dropbtn {
   background-color: #33333300;
+}
+
+@media (max-width: 768px) {
+  .logo {
+    width: 150px;
+    height: 40px;
+    margin-left: 20px;
+  }
+  .navbar {
+    height: 5%;
+    width: 100%;
+    padding: 10px;
+  }
+  .navbar ul {
+    margin-left: 5%;
+  }
+  .nav-link.active {
+    display: flex; /* Show the navigation menu when active */
+  }
+
+  .hamburger {
+    display: block;
+    cursor: pointer;
+  }
+  .bar {
+    width: 30px;
+    height: 3px;
+    background-color: #fff;
+    margin: 5px 0;
+  }
 }
