--- a/src/app/sharepage/sidebar/sidebar.component.css
+++ b/src/app/sharepage/sidebar/sidebar.component.css
@@ -2,8 +2,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  height: 80%;
-  width: 200px;
+  height: 100%;
+  width: 253px;
   background: rgb(198, 6, 126);
   background: linear-gradient(
     180deg,
@@ -13,7 +13,7 @@
   );
   color: #fff;
   padding: 20px;
-  margin-top: 102px;
+  margin-top: 95px;
 }
 .apple {
   width: 200px;
@@ -31,4 +31,35 @@ a {
   color: white;
   font-family: "Kanit", sans-serif;
   text-decoration: none;
+}
+
+@media (max-width: 768px) {
+  .sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 130px;
+    padding: 20px;
+    margin-top: 10.5%;
+  }
+  .apple {
+    width: 100px;
+    height: 35px;
+    margin-top: 5px;
+    border-radius: 10px;
+  }
+  .google {
+    width: 100px;
+    height: 35px;
+    margin-top: 7px;
+    border-radius: 10px;
+  }
+  a {
+    color: white;
+    font-family: "Kanit", sans-serif;
+    text-decoration: none;
+    font-size: 15px;
+    margin-top: 5px;
+  }
 }
