modified:   src/app/app.module.ts 	new file:   src/app/contact-form/contact-form.component.css 	new file:   src/app/contact-form/contact-form.component.html 	new file:   src/app/contact-form/contact-form.component.spec.ts 	new file:   src/app/contact-form/contact-form.component.ts 	modified:   src/app/image-carousel/image-carousel.component.css 	modified:   src/app/pages/credit/credit.component.css 	modified:   src/app/pages/home/home.component.css 	modified:   src/app/pages/home/home.component.html 	modified:   src/app/pages/partner/partner.component.css 	modified:   src/app/pages/partner/partner.component.html 	modified:   src/app/pages/privacy-policy/privacy-policy.component.css 	modified:   src/app/pages/privacy-policy/privacy-policy.component.html 	modified:   src/app/pages/savings/savings.component.css 	modified:   src/app/pages/savings/savings.component.html 	modified:   src/app/pages/spending/spending.component.css 	modified:   src/app/sharepage/navbar/navbar.component.css 	modified:   src/app/sharepage/navbar/navbar.component.html 	modified:   src/app/sharepage/navbar/navbar.component.ts 	modified:   src/app/sharepage/sidebar/sidebar.component.css

--- a/src/app/pages/credit/credit.component.css
+++ b/src/app/pages/credit/credit.component.css
@@ -53,3 +53,37 @@
   margin-left: 20%;
   width: 200px;
 }
+
+@media (max-width: 768px) {
+  .footer {
+    padding: 10px;
+    padding-left: 20px;
+    margin-left: 20px;
+  }
+  .vr {
+    width: 1px;
+    height: 10px;
+    background-color: #800505;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+  .footer a {
+    font-size: 10px;
+    text-decoration: none;
+    color: white;
+    width: 100px;
+  }
+  .footer p {
+    font-size: 10px;
+    margin-left: 20%;
+    width: 100px;
+  }
+  .container {
+    margin-left: 90px;
+  }
+  .header {
+    width: 100%;
+    height: 200px;
+    padding-top: 20%;
+  }
+}
