--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,71 +9,122 @@
       class="banner-mobile1"
     />
   </div>
-  <div class="section1">
+  <div class="section1" id="screenshots">
+    <h3>SCREENSHOTS</h3>
+    <p>The Power of Many!</p>
     <app-image-carousel></app-image-carousel>
   </div>
 
-  <div class="section2">
-    <div class="part1">
-      <div class="p1">
-        <p>
-          Invite Friends/Family Our Platform gives Users the freedom to form
-          their own clusters from known friends and family members, save and
-          meet their spending goals.
-        </p>
-        <div class="hr"></div>
+  <div class="section2" id="features">
+    <h3>SAVINGS BOX FEATURES</h3>
+    <div class="cover">
+      <div class="part1">
+        <div class="p1">
+          <p>
+            Invite Friends/Family Our Platform gives Users the freedom to form
+            their own clusters from known friends and family members, save and
+            meet their spending goals.
+          </p>
+          <div class="hr"></div>
+        </div>
+        <div class="p1">
+          <p>
+            No Hidden Fees There are no hidden fees for using our platform. The
+            platform provides financial accountability and transparency among
+            group members.
+          </p>
+          <div class="hr"></div>
+        </div>
+        <div class="p1">
+          <p>
+            Security & Peace of Mind Our platform offers Users the most needed
+            security and peace of mind in meeting their spending goals, using
+            the power of many.
+          </p>
+          <div class="hr"></div>
+        </div>
       </div>
-      <div class="p1">
-        <p>
-          No Hidden Fees There are no hidden fees for using our platform. The
-          platform provides financial accountability and transparency among
-          group members.
-        </p>
-        <div class="hr"></div>
+      <div class="part2">
+        <img src="../../../assets/Imgs/mobile-view2.png" alt="" />
       </div>
-      <div class="p1">
-        <p>
-          Security & Peace of Mind Our platform offers Users the most needed
-          security and peace of mind in meeting their spending goals, using the
-          power of many.
-        </p>
-        <div class="hr"></div>
+      <div class="part3">
+        <div class="p2">
+          <div class="hr"></div>
+          <p>
+            Group Chat & Notification Our end to end encrypted group chat
+            feature allows users to stay in touch with each other within their
+            own cluster. This enables users to discuss the status of their
+            groups.
+          </p>
+        </div>
+        <div class="p2">
+          <div class="hr"></div>
+          <p>
+            Saves Time & Money Because Users formed their own clusters from
+            known friends and family members, there is a deep sense of security
+            and users will be able to make their contributions and disburse
+            funds with relative ease, supported by a world class payment
+            processing platform.
+          </p>
+        </div>
+        <div class="p2">
+          <div class="hr"></div>
+          <p>
+            Access to Our Financial Coaching Center Users will be able to access
+            our Financial Coaching Center allowing them to benefit from a wide
+            range of financial topics affecting their financial wellbeing, such
+            as Savings, Spending, and Credit.
+          </p>
+        </div>
       </div>
     </div>
-    <div class="part2">
-      <img src="../../../assets/Imgs/mobile-view2.png" alt="" />
-    </div>
-    <div class="part3">
-      <div class="p2">
-        <div class="hr"></div>
+  </div>
+
+  <div class="section3" id="team">
+    <h3>JOIN OUR TEAM!</h3>
+    <div class="card">
+      <div class="card1">
+        <img src="../../../assets/Imgs/team1.jpg" alt="" />
+        <h3>MOHAMED BANGURA</h3>
         <p>
-          Group Chat & Notification Our end to end encrypted group chat feature
-          allows users to stay in touch with each other within their own
-          cluster. This enables users to discuss the status of their groups.
+          Mohamed Bangura is our President and Co-Founder. He is a highly
+          experienced Finance Professional with over a decade's experience
+          working in Financial Services and Fintech. He holds a Masters degree
+          in Financial Economics and he is a graduate of The Ohio University. "I
+          have witnessed the struggles of hard working people, not being able to
+          meet their spending goals, and the very institutions where they save
+          their monies, could not help them. That is why our team seeks to
+          harness the power of many and technology to help people save and meet
+          their spending goals".
         </p>
       </div>
-      <div class="p2">
-        <div class="hr"></div>
+      <div class="card2">
+        <img src="../../../assets/Imgs/team2.png" alt="" />
+        <h3>LEON JONAS</h3>
         <p>
-          Saves Time & Money Because Users formed their own clusters from known
-          friends and family members, there is a deep sense of security and
-          users will be able to make their contributions and disburse funds with
-          relative ease, supported by a world class payment processing platform.
+          Leon Jonas is our Vice President and Co-Founder. He is an experienced
+          IT Professional with over a decade's industry experience. "I am
+          excited to be part of a team that focuses on harnessing the savings
+          and spending goals of hard working Americans"
         </p>
       </div>
-      <div class="p2">
-        <div class="hr"></div>
+      <div class="card3">
+        <img src="../../../assets/Imgs/team3.jpg" alt="" />
+        <h3>DEEPAK SHARMA</h3>
         <p>
-          Access to Our Financial Coaching Center Users will be able to access
-          our Financial Coaching Center allowing them to benefit from a wide
-          range of financial topics affecting their financial wellbeing, such as
-          Savings, Spending, and Credit.
+          Deep Sharma is our IT Consultant (AppiTech). He holds a Masters degree
+          in Computer Science with over 5 years experience working on mobile
+          application development. "I became interested in The SavingsBox Team,
+          because they strive to be unique and different"
         </p>
       </div>
     </div>
   </div>
 
-  <div class="section3"></div>
+  <div class="section4">
+    <h3>CONTACT US</h3>
+    <app-contact-form></app-contact-form>
+  </div>
 
   <footer class="footer">
     <a routerLink="/privacyPolicy">Privacy Policy</a>
