--- a/src/app/pages/partner/partner.component.html
+++ b/src/app/pages/partner/partner.component.html
@@ -1,3 +1,21 @@
 <div class="container">
-  <p>partner works!</p>
+  <div class="header">Partner</div>
+  <div class="body">
+    <p>
+      If you are looking to invest in a team or an idea, we will be happy to
+      work with you. Contact us at partner@thesavingsbox.com
+    </p>
+  </div>
+  <footer class="footer">
+    <a routerLink="/privacyPolicy">Privacy Policy</a>
+    <div class="vr"></div>
+    <a routerLink="/termsOfUse">Terms of Use</a>
+    <div class="vr"></div>
+    <a routerLink="/eula">EULA</a>
+    <div class="vr"></div>
+    <a routerLink="/partner">Partner</a>
+    <div class="container">
+      <p>&copy; 2020 THE SAVINGSBOX INC.</p>
+    </div>
+  </footer>
 </div>
