--- a/src/app/pages/privacy-policy/privacy-policy.component.html
+++ b/src/app/pages/privacy-policy/privacy-policy.component.html
@@ -34,6 +34,167 @@
         Site, we may collect or access certain personal identifiable information
         such as:
       </p>
+      <li>Online Privacy Choices</li>
+      <p>
+        You can control how and when you want to receive notifications from us
+        by following instructions within the notices you receive from us and by
+        updating your preferences in the SavingsBox mobile app. To opt out of
+        marketing communications from us, use the options in the communications
+        we send or send an email request to optout@thesavingsbox.com. You may
+        not opt-out of administrative emails (for example, emails about your
+        transactions or policy changes) for your enrolled profile. You may
+        request to cancel your profile and enrollment with SavingsBox mobile app
+        by contacting us at help@thesavingsbox.com. Please note that, by doing
+        so you immediately terminate your ability to use the service.
+      </p>
+      <li>Your Rights Regarding Personal Information</li>
+      <p>
+        The SavingsBox service is provided to you in line with the
+        Graham-Leach-Bliley Act (“GLBA”) and as such are exempted from certain
+        privacy and data security laws (e.g., the California Consumer Privacy
+        Act (CCPA)). We provide notice of the following rights you have,
+        regardless of whether we are obligated by law to observe them and
+        regardless of your state of residence:
+      </p>
+      <li>Verification Process and Required Information</li>
+      <p>
+        In some cases, we may need to request additional information from you to
+        verify your identity or understand the scope of your request, although
+        you will not be required to create a profile with us to submit a request
+        or have it fulfilled. For requests made online, at a minimum, your
+        identity will be verified through your existing SavingsBox password
+        protected account and a One-Time Password (OTP) secure authorization.
+      </p>
+      <li>Authorized Agent</li>
+      <p>
+        You may designate an authorized agent to make a request on your behalf.
+        Your authorized agent will be required to produce a signed authorization
+        from you and additional identity verification may be required.
+        Authorized agent requests may be made help@thesavingsbox.com
+      </p>
+      <li>Children Under Thirteen</li>
+      <p>
+        The Site does not knowingly collect personally identifiable information
+        from children under the age of thirteen. If you are under the age of
+        thirteen, you must ask your parent or guardian to use this site. For
+        information about the Children’s Online Privacy Protection Act (COPPA),
+        visit the FTC website: www.ftc.gov.
+      </p>
+      <li>Accessing, Reviewing, and Updating Your Personal Information</li>
+      <p>
+        You can access, review, and update your personal information at any time
+        by accessing your profile in the SavingsBox mobile app. You can update
+        your User profile and registration information, including your financial
+        information, personal information, email addresses and mobile numbers.
+        Keeping this information up to date is very important. If this
+        information is incomplete, inaccurate, or not current, please update
+        your information by looking into your profile.
+      </p>
+      <li>Data Retention Policy</li>
+      <p>
+        We generally retain information for as long as it is necessary and
+        relevant for our operations and to comply with applicable law. You may
+        request to cancel your profile and enrollment with SavingsBox by
+        contacting us at help@thesavingsbox.com. Information from closed or
+        suspended profiles will only be retained as necessary to comply with
+        law, prevent fraud, prevent re-registration, assist with investigations,
+        resolve disputes, analyze or troubleshoot programs, enforce our terms
+        and conditions, or take other actions permitted by law.
+      </p>
+      <li>Use of Cookies</li>
+      <p>
+        The SavingsBox Inc. site may use cookies to help you personalize your
+        online experience. A cookie is a text file that is placed on your hard
+        drive by a web page server. Cookies cannot be used to run program or
+        deliver virus to your computer. Cookies are uniquely assigned to you and
+        can only be read by a web server in the domain that issued the cookie to
+        you. One of the primary features of cookies is to provide a convenience
+        feature to save you time. The purpose of a cookie is to tell the web
+        server that you returned to a specific page. For example, if you
+        personalize the site pages or register with the site, a cookie helps to
+        recall your specific information on subsequent visits. This simplifies
+        the process of recording your personal information. When you return to
+        the same site the information you previously provided can be retrieved,
+        so you can easily use the site features that you customized. You have
+        the ability to accept or decline cookies.
+      </p>
+      <li>Notice to California Residents</li>
+      <p>
+        How We Respond to Do Not Track Signals for California Residents:
+        California Business & Professions Code Section 22575(b) (as amended
+        effective January 1, 2014) provides that California residents are
+        entitled to know how we respond to “Do Not Track” browser settings. We
+        do not currently take actions to respond to Do Not Track signals because
+        a uniform technological standard has not yet been developed. We continue
+        to review new technologies and may adopt a standard once one is created.
+      </p>
+      <li>Links</li>
+      <p>
+        Our site may contain links to other third-party websites. When you leave
+        our site and visit those websites, you are bound by the privacy policies
+        of those websites. We are not responsible for the content or privacy
+        practices of such other sites, which are governed by their own privacy
+        policies and practices. We encourage our users to be aware when they
+        leave our site and to read the privacy statements of any other site that
+        collects personally identifiable information.
+      </p>
+      <li>Security</li>
+      <p>
+        To help us protect the privacy of your data, we maintain technical,
+        physical, and administrative security measures to protect against loss,
+        misuse, unauthorized access, disclosure, or alteration. Some of the
+        safeguards we use are firewalls, data encryption, physical access
+        controls to our data centers and information access authorization
+        controls. It is your responsibility to make sure that your personal
+        information is accurate and that your password(s) and profile
+        registration information are secure and not shared with third parties.
+        Additionally, we use security features that are built into the hardware
+        and software of your device to help protect your transactions, such as
+        facial or fingerprint recognition. We do not collect or store your
+        biometric verification information when you use the SavingsBox mobile
+        app.
+      </p>
+      <li>Geographical Scope and Processing</li>
+      <p>
+        We are located in the United States. Our services are available for
+        eligible United States users only. Our operations use a network of
+        computers, cloud-based services, and other infrastructure and
+        information technology that are based in the United States.
+        Additionally, we may use third-party service providers that may be
+        located in and process or store your personal information in the United
+        States, the European Union, and other countries. If you create a
+        profile, you consent to the collection and/or processing of your
+        personal information and tracking technologies/cookies as described in
+        this Privacy Policy.
+      </p>
+      <li>Notification Regarding Updates to This Privacy Policy</li>
+      <p>
+        The SavingsBox Inc. reserves the right to change this Privacy Policy
+        from time to time. We may update this Privacy Policy. We will notify you
+        about significant changes in the way we treat personal information by
+        sending a notice to the primary email address specified in your account.
+        You agree that we may notify you about material changes in the way we
+        treat personal information by placing a prominent notice on the Site. Be
+        sure to check the Site frequently for updates.
+      </p>
+      <li>Contact Information</li>
+      <p>
+        The SavingsBox Inc. welcomes your questions or comments regarding this
+        Statement of Policy. Should you have questions that are not answered in
+        this Privacy Policy, feel free to email us at privacy@thesavingsbox.com
+      </p>
     </ul>
   </div>
+  <footer class="footer">
+    <a routerLink="/privacyPolicy">Privacy Policy</a>
+    <div class="vr"></div>
+    <a routerLink="/termsOfUse">Terms of Use</a>
+    <div class="vr"></div>
+    <a routerLink="/eula">EULA</a>
+    <div class="vr"></div>
+    <a routerLink="/partner">Partner</a>
+    <div class="container">
+      <p>&copy; 2020 THE SAVINGSBOX INC.</p>
+    </div>
+  </footer>
 </div>
