--- a/src/app/pages/savings/savings.component.html
+++ b/src/app/pages/savings/savings.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="header">Savings</div>
+  <div class="header"></div>
   <div class="body">
     <h2>HOW TO INCREASE YOUR SAVINGS?</h2>
     <p>
@@ -58,6 +58,7 @@
         goal has already been achieved. Never doubt the power of the universe,
         just believe.
       </li>
+      <br />
       <li>
         Determine where you stand financially – there is a saying that if you
         fail to plan, then you plan to fail. But planning does not only involve
@@ -73,6 +74,7 @@
         on things that you need to survive and delay or let go of the
         consumption of the things that you don’t need to survive.
       </li>
+      <br />
       <li>
         Be aggressive to save money – we all know it is a hard thing to change
         certain habits especially when they bring you a level of excitement and
@@ -87,6 +89,7 @@
         saving money. Don’t be disappointed if you don’t make the top of your
         range but be sure to stick between this range and save some amount.
       </li>
+      <br />
       <li>
         Find someone to hold you accountable – think of this like having a gym
         buddy. As with all our New Year resolutions, we express a great desire
@@ -100,17 +103,20 @@
         all from a one-stop shop. The App is available in both App Store and
         Google Play Store.
       </li>
+      <br />
       <li>
         Build up an emergency fund before you start paying off debts. This gives
         you two things: Peace of mind, and something to look back at and say
         yes, I can do this.
       </li>
+      <br />
       <li>
         Be yourself and do not compare yourself with others – when you are going
         through a change, the best thing is to be the best version of yourself.
         There might be instances when people will say you are miserly or stingy
         but don’t fret because your goal is at hand.
       </li>
+      <br />
       <li>
         Be frugal but don’t be cheap – there is a thin line between being frugal
         and being cheap. To be frugal is to avoid excesses and wastages while
@@ -128,6 +134,7 @@
         your list will no longer be a necessity and you can easily avoid making
         these impulse buying decisions.
       </li>
+      <br />
       <li>
         Cut down on your Consumption/Expenses – You won’t be able to build up
         your savings if you don’t control how you spend money. Cutting down your
@@ -145,6 +152,7 @@
         or friends to maybe once a month. These are tough decisions, but they
         are worth taking to help you meet your savings goal.
       </li>
+      <br />
       <li>
         Avoid taking on New Debts – if you already have debts you’re paying on,
         it is a good practice to focus on reducing your debts. If you can’t
@@ -155,6 +163,7 @@
         delinquencies that will further ruin your credit score. We will look at
         some of the ways to help reduce your debts in another article.
       </li>
+      <br />
       <li>
         Get a Side Hustle – It’s easy to lose motivation when you’re going
         through tough financial times. However, having a side hustle is great
