--- a/src/app/sharepage/navbar/navbar.component.html
+++ b/src/app/sharepage/navbar/navbar.component.html
@@ -6,9 +6,9 @@
     <li class="dropdown">
       <a href="#" class="dropbtn">Home</a>
       <div class="dropdown-content">
-        <a routerLink="/home">Screenshots</a>
-        <a routerLink="/home-subpage2">App Features</a>
-        <a routerLink="/home-subpage3">Reviews</a>
+        <a routerLink="">Screenshots</a>
+        <a routerLink="">App Features</a>
+        <a routerLink="">Reviews</a>
       </div>
     </li>
     <li class="dropdown">
