--- a/src/app/image-carousel/image-carousel.component.css
+++ b/src/app/image-carousel/image-carousel.component.css
@@ -32,3 +32,28 @@ button {
 .next {
   margin-left: 100%;
 }
+
+@media (max-width: 768px) {
+  .image-carousel {
+    position: relative;
+    width: 100%;
+    max-width: 300px;
+  }
+
+  .carousel img {
+    width: 50%;
+    margin-left: 30%;
+  }
+
+  button {
+    top: 25%;
+    transform: translateY(-50%);
+    padding: 5px;
+  }
+  .prev {
+    /* margin-left: 25%; */
+  }
+  .next {
+    /* margin-left: 50%; */
+  }
+}
