--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -28,6 +28,14 @@
     rgba(196, 112, 223, 1) 100%
   );
 }
+.section1 h3 {
+  text-align: center;
+  font-weight: 900;
+}
+.section1 p {
+  text-align: center;
+  color: white;
+}
 .section2 {
   width: 100%;
   background: rgb(198, 6, 126);
@@ -37,9 +45,18 @@
     rgba(198, 6, 126, 1) 50%,
     rgba(147, 14, 190, 1) 100%
   );
-  display: flex;
   padding: 20px;
   color: white;
+}
+.section2 .cover {
+  display: flex;
+  margin-top: 40px;
+}
+.section2 h3 {
+  font-weight: 900;
+  color: white;
+  text-align: center;
+  margin-top: 20px;
 }
 .part2 img {
   width: 300px;
@@ -87,6 +104,69 @@
     rgba(196, 112, 223, 1) 100%
   );
 }
+.card {
+  background-color: #80050500;
+  display: flex;
+  flex-direction: row;
+  border: none;
+  margin-top: 50px;
+}
+.section3 h3 {
+  font-weight: 900;
+  text-align: center;
+}
+.card2 {
+  margin-left: 10%;
+}
+.card3 {
+  margin-left: 10%;
+}
+.card1 h3,
+.card2 h3,
+.card3 h3 {
+  width: 250px;
+  font-size: 18px;
+  font-weight: 900;
+  margin-top: 20px;
+}
+.card1 p,
+.card2 p,
+.card3 p {
+  width: 250px;
+  font-size: 15px;
+  color: white;
+}
+.card1 img {
+  width: 100px;
+  height: 100px;
+  border-radius: 100px;
+}
+.card2 img {
+  width: 100px;
+  height: 100px;
+  border-radius: 100px;
+}
+.card3 img {
+  width: 100px;
+  height: 100px;
+  border-radius: 100px;
+}
+.section4 {
+  width: 100%;
+  background: rgb(198, 6, 126);
+  background: linear-gradient(
+    180deg,
+    rgba(198, 6, 126, 1) 0%,
+    rgba(198, 6, 126, 1) 50%,
+    rgba(147, 14, 190, 1) 100%
+  );
+  padding: 20px;
+}
+.section4 h3 {
+  font-weight: 900;
+  text-align: center;
+  margin-top: 20px;
+}
 .footer {
   background: rgb(181, 7, 116);
   background: linear-gradient(
@@ -117,4 +197,143 @@
   font-size: 13px;
   margin-left: 40%;
   width: 200px;
+}
+
+@media (max-width: 768px) {
+  .container {
+    margin-left: 100px;
+  }
+  .header {
+    padding-top: 40%;
+  }
+  .header h2,
+  .header p {
+    font-size: 12px;
+  }
+  .banner-mobile1 {
+    width: 300px;
+    height: 100px;
+  }
+  .section1 h3 {
+    font-size: 18px;
+  }
+  .section1 p {
+    font-size: 14px;
+  }
+  .section2 {
+    padding: 10px;
+  }
+  .section2 .cover {
+    margin-top: 20px;
+  }
+  .section2 h3 {
+    font-size: 18px;
+    margin-top: 10px;
+  }
+  .part2 img {
+    width: 100px;
+    height: 300px;
+  }
+  .p1 {
+    margin-left: 7%;
+  }
+  .p1 p {
+    width: 100px;
+    margin-top: 25px;
+    font-size: 3px;
+  }
+  .p1 .hr {
+    width: 20%;
+    height: 2px;
+    margin-top: 50px;
+  }
+  .p2 {
+    display: flex;
+    margin-right: 10%;
+  }
+  .p2 p {
+    width: 100px;
+    margin-top: 15px;
+    font-size: 3px;
+    margin-left: 2%;
+  }
+  .p2 .hr {
+    background-color: white;
+    width: 20%;
+    height: 2px;
+    margin-top: 50px;
+  }
+
+  .section3 {
+    padding: 30px;
+  }
+  .card {
+    margin-top: 25px;
+    display: grid;
+  }
+  .section3 h3 {
+    font-size: 18px;
+  }
+  .card2 {
+    margin-left: 5%;
+  }
+  .card3 {
+    margin-left: 5%;
+  }
+  .card1 h3,
+  .card2 h3,
+  .card3 h3 {
+    width: 150px;
+    font-size: 10px;
+    margin-top: 10px;
+  }
+  .card1 p,
+  .card2 p,
+  .card3 p {
+    width: 150px;
+    font-size: 7px;
+  }
+  .card1 img {
+    width: 50px;
+    height: 50px;
+    border-radius: 100px;
+  }
+  .card2 img {
+    width: 50px;
+    height: 50px;
+    border-radius: 100px;
+  }
+  .card3 img {
+    width: 50px;
+    height: 50px;
+    border-radius: 100px;
+  }
+  .section4 {
+    padding: 10px;
+  }
+  .section4 h3 {
+    font-size: 18px;
+    margin-top: 10px;
+  }
+  .footer {
+    padding: 10px;
+  }
+  .vr {
+    width: 1px;
+    height: 10px;
+    background-color: #800505;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+  .footer a {
+    font-size: 10px;
+    text-decoration: none;
+    color: white;
+    width: 100px;
+  }
+  .footer p {
+    font-size: 10px;
+    margin-left: 20%;
+    width: 100px;
+  }
 }
