--- a/src/app/pages/savings/savings.component.css
+++ b/src/app/pages/savings/savings.component.css
@@ -3,7 +3,7 @@
 }
 .header {
   width: 100%;
-  height: 100px;
+  height: 200px;
   background: rgb(198, 6, 126);
   background: linear-gradient(
     180deg,
@@ -11,10 +11,13 @@
     rgba(198, 6, 126, 1) 50%,
     rgba(147, 14, 190, 1) 100%
   );
-  text-align: center;
   padding-top: 20%;
-  color: white;
+}
+.header h3 {
+  /* color: white; */
   font-size: 30px;
+  text-align: center;
+  /* margin-top: 500px; */
   font-family: "Kanit", sans-serif;
 }
 .body {
@@ -32,10 +35,8 @@ h2 {
     rgba(163, 172, 7, 1) 100%
   );
   color: #fff;
-  text-align: center;
-  position: fixed;
   bottom: 0;
-  width: 82.5%;
+  width: 100%;
   display: flex;
   padding: 20px;
 }
@@ -50,9 +51,62 @@ h2 {
   font-size: 13px;
   text-decoration: none;
   color: white;
+  width: 200px;
 }
 .footer p {
   font-size: 13px;
-  margin-left: 20%;
+  margin-left: 40%;
   width: 200px;
+}
+
+@media (max-width: 768px) {
+  .footer {
+    padding: 10px;
+    padding-left: 20px;
+  }
+  .vr {
+    width: 1px;
+    height: 10px;
+    background-color: #800505;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+  .footer a {
+    font-size: 10px;
+    text-decoration: none;
+    color: white;
+    width: 100px;
+  }
+  .footer p {
+    font-size: 10px;
+    margin-left: 20%;
+    width: 100px;
+  }
+  .container {
+    margin-left: 90px;
+  }
+  .header {
+    width: 100%;
+    height: 200px;
+    padding-top: 10%;
+  }
+  .header h3 {
+    font-size: 30px;
+    text-align: center;
+    font-family: "Kanit", sans-serif;
+  }
+  .body {
+    padding: 30px;
+  }
+  h2 {
+    font-weight: 900;
+    font-size: 10px;
+  }
+  p {
+    font-size: 10px;
+  }
+  li {
+    font-size: 10px;
+    margin-right: 20px;
+  }
 }
